<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>


    <!-- app layout below -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="17dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/enteredNameOfFood"
                        android:layout_width="173dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:singleLine="true"/>

                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/barcodeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/barcode_24dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="11dp"/>

            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp">

                <EditText
                    android:id="@+id/enteredQuantityOfFood"
                    android:layout_width="174dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/supply"
                    android:inputType="number"
                    android:digits="0123456789"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_expirationDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                    android:layout_marginTop="11dp" >

                <EditText
                    android:id="@+id/expirationDatePicked"
                    android:layout_width="173dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:clickable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/expiration"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp">

                <EditText
                    android:id="@+id/enteredPriceOfFood"
                    android:layout_width="179dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/price"
                    android:inputType="numberDecimal"
                    android:textAllCaps="false" />

            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="17dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/addToFavoriteLabel"
                    android:text="@string/add_also_to_fav" />

                <Switch
                    android:id="@+id/addToFavoriteSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="17dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/selectCategoryLabel"
                    android:text="@string/select_category" />

                <Spinner
                    android:id="@+id/categorySpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"/>

            </LinearLayout>


            <Button
                android:id="@+id/doActionFoodButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="@string/add_food"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/enteredBarcodeOfFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:text=""/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>